--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <meta name="theme-color" content="#4e8ef7">
 
   <!-- cordova.js required for cordova apps -->
-  <script src="http://maps.google.com/maps/api/js"></script>
+  <script src="assets/leaflet.js"></script>
   <script src="cordova.js"></script>
 
   <!-- un-comment this code to enable service worker
@@ -25,6 +25,7 @@
     }
   </script>-->
 
+  <link href="assets/leaflet.css" rel="stylesheet">
   <link href="build/main.css" rel="stylesheet">
 
 
