--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,10 +1,9 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+  <ion-navbar color="secondary">
+    <ion-title>Propositions</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Proposition</h2>
   <div id="map"></div>
 </ion-content>
