start rated system

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,4 @@
-<ion-tabs selectedIndex="1" color="secondary">
-  <ion-tab [root]="tab1Root" tabTitle="Mes notes" tabIcon="information-circle"></ion-tab>
+<ion-tabs color="secondary">
   <ion-tab [root]="tab2Root" tabTitle="Proposition" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Notes" tabIcon="contacts"></ion-tab>
 </ion-tabs>
