--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,5 +5,23 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>
+        Mes notes
+      </ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item *ngFor="let rate of activitiesRated">
+          <ion-label fixed>{{ rate.activity.name }}</ion-label>
+          <ion-input type="number" [(ngModel)]="rate.value" ></ion-input>
+          <input>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+  <h2>Propositions</h2>
   <div id="map"></div>
 </ion-content>
